--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "eslint-plugin-snakecasejs",
-  "description": "Eslint plugin to enforce a style of snake_case in your project, rather than just disabling camelcase.",
-  "version": "1.1.0-5",
-  "main": "index.js",
+  "description": "Eslint plugin to enforce a style of snake_case in your project, rather than just disabling camelCase.",
+  "version": "1.2.0",
+  "main": "plugin.js",
   "author": "Patryk Rzucidlo [@ptkdev] <support@ptkdev.io> (https://ptkdev.it)",
   "author_original": "David Buchan-Swanson <david.buchanswanson@gmail.com>",
   "license": "MIT",
-  "homepage": "https://github.com/ptkdev",
+  "homepage": "https://ptkdev.io",
   "bugs": {
     "url": "https://github.com/ptkdev/eslint-plugin-snakecasejs/issues"
   },
@@ -15,7 +15,7 @@
     "url": "https://github.com/ptkdev/eslint-plugin-snakecasejs.git"
   },
   "scripts": {
-    "start": "node index.js",
+    "start": "node plugin.js",
     "test": "node test.js",
     "lint": "eslint ./ --cache --ignore-pattern .gitignore --fix",
     "precommit-lint-check": "echo 'Pre-commit lint checks...' && exit 0"
@@ -30,8 +30,8 @@
     "snakecase",
     "snakecase-javascript",
     "underscore-syntax",
-    "programming style",
-    "coding conventions",
+    "programming-style",
+    "conventions",
     "syntax",
     "coding-style",
     "eslint",
@@ -39,9 +39,6 @@
     "eslint-plugin-snakecase",
     "eslint-plugin-snakecasejs"
   ],
-  "dependencies": {
-    "eslint": "^4.19.1"
-  },
   "engines": {
     "node": ">=7.6.0"
   },
@@ -50,7 +47,7 @@
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.7.0",
-    "eslint-plugin-snakecasejs": "^1.1.0",
+    "eslint-plugin-snakecasejs": "latest",
     "eslint-plugin-standard": "^3.1.0",
     "pre-commit": "^1.2.2"
   }
