--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "eslint-plugin-snakecasejs",
   "description": "Eslint plugin to enforce a style of snake_case in your project, rather than just disabling camelCase.",
-  "version": "1.2.0-3",
+  "version": "1.2.1",
   "main": "plugin.js",
-  "author": "Patryk Rzucidlo [@ptkdev] <support@ptkdev.io> (https://ptkdev.it)",
+  "author": "Patryk Rzucidło [@ptkdev] <support@ptkdev.io> (https://ptkdev.it)",
   "author_original": "David Buchan-Swanson <david.buchanswanson@gmail.com>",
   "license": "MIT",
   "homepage": "https://ptkdev.io",
@@ -43,6 +43,7 @@
     "node": ">=7.6.0"
   },
   "devDependencies": {
-    "pre-commit": "^1.2.2"
+    "eslint": "latest",
+    "pre-commit": "latest"
   }
 }
