--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,8 @@ proguard/
 logs/*.log
 logs/screenshots/*.png
 logs/screenshots/*.jpg
+examples/*.log
+examples/*.json
 databases/*.db
 databases/*.sql
 databases/*.json
@@ -49,7 +51,6 @@ databases/*.json
 *.sql
 *.sqlite
 *.lock
-*.vscode
 yarn-debug.log
 yarn-error.log
 
@@ -115,9 +116,12 @@ pids
 npm-debug.log
 /node_modules
 
+# Husky #
+/.husky/_/
+
 # App #
 #######
-plugins/*/
-config.js
-config/*.js
-configs/*.js
+/app/configs/config.js
+/app/configs/config.ts
+/dist
+/build
